--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="name">
       <h1>Trubitsyn Andrey</h1>
       <div>
-        <img src="images/avatar.jpg">
+        <img id="profile" src="images/avatar.jpg" alt="foto">
       </div>
     </div>
     <div id="contacts">
@@ -53,6 +53,16 @@
       produce. .
     </p>
   </section>
+  <footer>
+    <p>
+      Created by:
+      <a id="github" href="https://github.com/trubitsynandrey">trubitsynandrey</a>
+      in 2021.
+      <a href="https://rs.school/js/"><img src="images/rs_school_js.svg" alt="rsschool"></a>
+
+    </p>
+
+  </footer>
 </body>
 
 </html>
